--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">KKW Bus Tracking</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">AKMap Bus Tracker</string>
+    <string name="my_website">
+        <a href ="https://kulkarniatharva.github.io/">My Website</a>
+    </string>
 </resources>
